# absconda

./: .envrc  .gitignore  Dockerfile.data-science  Dockerfile.minimal  LICENSE  MANIFEST.in  README.md  absconda-remote.yaml  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: publish.yml  test.yml
docs/: index.md  plan.md  renv.md  spec.md  team-setup.md  test.md
docs/architecture/: README.md  design-overview.md  plan.md  remote-execution.md  template-system.md
docs/development/: README.md  contributing.md  release-process.md  testing.md
docs/examples/: README.md  data-science.md  gpu-pytorch.md  hpc-singularity.md  minimal-python.md  r-bioconductor.md
docs/getting-started/: concepts.md  installation.md  quickstart.md
docs/guides/: advanced-templating.md  basic-usage.md  building-images.md  hpc-deployment.md  remote-builders.md  renv-integration.md  requirements-mode.md
docs/how-to/: README.md  ci-cd-integration.md  custom-base-images.md  multi-stage-builds.md  secrets-and-auth.md
docs/reference/: cli.md  configuration.md  environment-files.md  policies.md
examples/: README.md  absconda-requirements.txt  data-science-env.yaml  minimal-env.yaml  remote-builder.yaml  renv-env.yaml  system-config.yaml  test-requirements.txt
modulefiles/absconda/: 0.1.0
src/absconda/: __init__.py  __main__.py  cli.py  config.py  environment.py  modules.py  (+4 more)
tests/: test_cli.py  test_environment.py  test_examples.py  test_integration_smoke.py  test_modules.py  test_policy.py  test_remote.py  test_templates.py  test_wrappers.py
wrappers/: absconda
(+21 files in other folders)
